// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Basic icon 1`] = `
<div
  class="rc-picker-input"
>
  <input
    autocomplete="off"
    readonly=""
    size="12"
    title="1990-09-03"
    value="1990-09-03"
  />
  <span
    class="rc-picker-suffix"
  >
    <span
      class="suffix-icon"
    />
  </span>
  <span
    class="rc-picker-clear"
    role="button"
  >
    <span
      class="suffix-icon"
    />
  </span>
</div>
`;

exports[`Picker.Basic inputRender 1`] = `
<div
  class="rc-picker-input"
>
  <input
    autocomplete="off"
    readonly=""
    size="12"
    title=""
    value=""
  />
</div>
`;

exports[`Picker.Basic panelRender 1`] = `
<div
  class="rc-picker"
>
  <div
    class="rc-picker-input"
  >
    <input
      autocomplete="off"
      readonly=""
      size="12"
      title=""
      value=""
    />
  </div>
</div>
`;

exports[`Picker.Basic pass data- & aria- & role 1`] = `
<div>
  <div
    class="rc-picker"
  >
    <div
      class="rc-picker-input"
    >
      <input
        aria-label="3334"
        autocomplete="off"
        data-test="233"
        readonly=""
        role="search"
        size="12"
        title=""
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Picker.Basic should render correctly in rtl 1`] = `
<div>
  <div
    class="rc-picker rc-picker-rtl"
  >
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        readonly=""
        size="12"
        title=""
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Picker.Basic time step should show integer when step is not integer (hour) 1`] = `
<ul
  class="rc-picker-time-panel-column"
  style="position: relative;"
>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      00
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      5.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      11
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      16.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      22
    </div>
  </li>
</ul>
`;

exports[`Picker.Basic time step should show integer when step is not integer (minute) 1`] = `
<ul
  class="rc-picker-time-panel-column"
  style="position: relative;"
>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      00
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      5.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      11
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      16.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      22
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      27.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      33
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      38.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      44
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      49.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      55
    </div>
  </li>
</ul>
`;

exports[`Picker.Basic time step should show integer when step is not integer (second) 1`] = `
<ul
  class="rc-picker-time-panel-column"
  style="position: relative;"
>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      00
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      5.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      11
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      16.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      22
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      27.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      33
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      38.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      44
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      49.5
    </div>
  </li>
  <li
    class="rc-picker-time-panel-cell"
  >
    <div
      class="rc-picker-time-panel-cell-inner"
    >
      55
    </div>
  </li>
</ul>
`;
